Next release
------------

- Python 3 compatibility.

0.2a4 (2012-04-23)
------------------

- Add ``SessionFileUploadTempStore`` (a Deform FileUploadTempStore
  implementation that uses the Pyramid sessioning machinery and a temporary
  file on disk).

0.2a3 (2012-03-30)
------------------

- Add ``includeme`` hook for automatic configuration of translations
  and configuration of additional template search paths for the ZPT
  renderer through the INI file.

0.2a2 (2012-01-29)
------------------

- Fix broken release which didn't include all files.

0.2a1 (2012-01-28)
------------------

- This is an alpha release solely because documentation is incomplete.

- Add usage example for FormView class.

- Fix syntax error in javascript when ajax_options are not specified. Use a 
  string representing an empty javascript object as the default for 
  ajax_options.

- Add CSRFSchema class API.

0.1.6 (2011-03-24)
------------------

- Allow wizard schemas to have an "appstruct" attribute; these are used
  for wizard edit forms.

0.1.5 (2011-03-23)
------------------

- Respect a ``wizard_serializer`` attribute of a schema to allow for munging
  of the validated data before it is pickled and after it is unpickled.

0.1.4 (2010-12-17)
------------------

- Make it possible for schemas to have a ``prev_ok`` and ``next_ok``
  attribute, which should be callables.  If either returns ``False``, the
  corresponding button on the form will be disabled (requires deform>=0.8.1).

0.1.3 (2010-12-02)
------------------

- Add classes and current step info to form wizard.

0.1.2 (2010-12-1)
------------------

- Another not-ready-for-primetime customer release: add ``get_summary()``
  method to form wizard.

0.1.1 (2010-11-30)
------------------

- Another not-ready-for-primetime customer release: refactor wizard state
  mutation and allow wizard states to be retrieved by name.
 
0.1 (2010-11-28)
----------------

- Not-ready-for-primetime release for customer (not uploaded to PyPI).
